<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/card"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginTop="32dp"
    android:layout_width="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/title_input"
            android:textColor="#333"
            android:textSize="18sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlatform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"

                android:text="@string/platform_input" />

            <TextView
                android:id="@+id/tvReleasDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realestData_tv" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>