<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddGameActivity"
    tools:showIn="@layout/activity_add_game">

    <androidx.cardview.widget.CardView
        android:layout_width="395dp"
        android:layout_height="282dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="394dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#7C7B7B"
                    android:hint="@string/title_input"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="410dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlatform"
                    android:layout_width="match_parent"
                    android:layout_height="76dp"
                    android:backgroundTint="#7C7B7B"
                    android:hint="@string/platform_input"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="125dp"
                    android:layout_height="81dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#7C7B7B"
                        android:hint="@string/day_input"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="125dp"
                    android:layout_height="81dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#7C7B7B"
                        android:hint="@string/month_input"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="125dp"
                    android:layout_height="81dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#7C7B7B"
                        android:hint="@string/year_input"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>